--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Password Strength Checker</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="PasswordStrengthChecker.png" type="image/icon type">
 </head>
 
 <body>
